nav side Drawer 애니메이션 추가

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ body {
   background: lightgray;
 }
 
-.slide-in-left-enter {
+.slide-in-left-enter { /* side-bar transition */
   transform: translateX(-100%);
 }
 
