--- a/src/shared/components/FormElements/DropDown.css
+++ b/src/shared/components/FormElements/DropDown.css
@@ -1,3 +1,4 @@
+
 .dropbox-container {
     width: 250px;
 }
@@ -7,6 +8,7 @@
     justify-content: space-between;
     align-items: center;
 
+    background-color: #fff;
     width: 100%;
     height: 50px;
     padding: 9px 14px;
@@ -18,6 +20,26 @@
     border-radius: 6px;
     appearance: none;
 }
+
+.dropdown-menu {
+    background-color: #fff;
+    padding: 9px 14px;
+    font-size: 15px;
+    line-height: 30px;
+    max-height: 280px;
+    border-color: rgba(224, 226, 231, 0.5);
+    border-radius: 6px;
+    box-shadow: 0 4px 9px 0 rgba(63, 65, 80, 0.1);
+  }
+
+  .dropdown-menu > li {
+    padding-top: 8px;
+  }
+
+  
+  /* .dropdown-menu.show {
+    
+  } */
 
 /* fade in */
 @keyframes dropdown-fade-in-animation {
