--- a/src/post/components/PostItem.css
+++ b/src/post/components/PostItem.css
@@ -6,9 +6,16 @@
   margin: 0 auto;
 }
 
+.post-top-view-btn {
+  display: flex;
+  justify-content: space-between;
+  border: 0;
+  padding: 10px;
+}
+
 .post-view-btn {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   border: 0;
   padding: 10px;
 }
