--- a/src/post/page/PostForm.css
+++ b/src/post/page/PostForm.css
@@ -16,6 +16,11 @@
     justify-content: space-between;
 }
 
+.bottom-container{
+    display: flex;
+    justify-content: center;
+}
+
 .post-form {
     list-style: none;
     margin: 0 auto;
