--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -62,14 +62,14 @@
     }
   
     .nav-links button {
-      border: 1px solid white;
-      color: white;
+      border: 1px solid #292929;
+      color: #292929;
       background: transparent;
     }
     
     .nav-links button:hover,
     .nav-links button:active {
-      color: #00A4FA;
+      color: #ffffff;
     }
   }
   
