--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,48 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap');
-
 * {
   box-sizing: border-box;
-}
-
-html {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Noto Sans CJK KR';
 }
 
 body {
   margin: 0;
   background: lightgray;
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 100;
+  src: url("asset/font/NotoSansKR-Light.woff2") format('woff2'),
+  url("asset/font/NotoSansKR-Light.woff") format('woff'),
+  url("asset/font/NotoSansKR-Light.otf") format('truetype')
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: normal;
+  src: url("asset/font/NotoSansKR-Regular.woff2") format('woff2'),
+  url("asset/font/NotoSansKR-Regular.woff") format('woff'),
+  url("asset/font/NotoSansKR-Regular.otf") format('truetype')
+}
+
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: 500;
+  src: url("asset/font/NotoSansKR-Medium.woff2") format('woff2'),
+  url("asset/font/NotoSansKR-Medium.woff") format('woff'),
+  url("asset/font/NotoSansKR-Medium.otf") format('truetype')
+}
+
+@font-face {
+  font-family: 'Noto Sans CJK KR';
+  font-style: normal;
+  font-weight: bold;
+  src: url("asset/font/NotoSansKR-Bold.woff2") format('woff2'),
+  url("asset/font/NotoSansKR-Bold.woff") format('woff'),
+  url("asset/font/NotoSansKR-Bold.otf") format('truetype')
 }
 
 .slide-in-left-enter { /* side-bar transition */
