--- a/src/shared/components/Navigation/MainNavigation.css
+++ b/src/shared/components/Navigation/MainNavigation.css
@@ -20,6 +20,8 @@
   
   .main-navigation__title {
     color: #000000;
+    font-size: 1.4rem;
+    font-weight: bold;
   }
   
   .main-navigation__title a {
