[style] Input style 변경

--- a/src/shared/components/FormElements/Input.css
+++ b/src/shared/components/FormElements/Input.css
@@ -17,16 +17,17 @@
   .form-control textarea {
     width: 100%;
     font: inherit;
-    border: 1px solid #ccc;
-    background: #f8f8f8;
+    outline: 0;
+    border: 0;
+    border-bottom: 2px solid #ccc;
+    background: transparent;
     padding: 0.15rem 0.25rem;
   }
   
   .form-control input:focus,
   .form-control textarea:focus {
     outline: none;
-    background: #ebebeb;
-    border-color: #510077;
+    border-color: #00A4FA;
   }
   
   .form-control--invalid label,
@@ -38,5 +39,4 @@
   .form-control--invalid input,
   .form-control--invalid textarea {
     border-color: red;
-    background: #ffd1d1;
   }
