--- a/src/survey/styles/Check.css
+++ b/src/survey/styles/Check.css
@@ -1,14 +1,31 @@
 .check-option {
-  margin: 30px auto 10px;
+  margin: 30px auto 20px;
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
 
 .check-item {
+  display: flex;
   padding: 10px 10px 0 0;
+  align-items: flex-end;
+  justify-content: space-around;
+}
+
+.check-item input {
+  width: 80%;
+  outline: 0;
+  border: 0;
+  border-bottom: 2px solid #ccc;
+  padding: 0.1rem 0.25rem;
+  margin-left: 1.5rem;
+  background: transparent;
 }
 
 .check-option span,
-span {
+.plus-opt {
   cursor: pointer;
+}
+
+.plus-opt {
+  margin-left: 2rem;
 }
