--- a/src/survey/styles/SurveyForm.css
+++ b/src/survey/styles/SurveyForm.css
@@ -1,13 +1,15 @@
 .survey_card {
   width: 25rem;
   margin: 1rem auto;
+  background-color: ghostwhite;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
 .survey {
   padding: 1rem;
 }
 
-.text-input{
+.text-input {
   width: 20rem;
   display: flex;
   margin: 30px 0 0;
@@ -23,6 +25,6 @@
   padding: 5px 5px;
 }
 
-.survey_button{
+.survey_button {
   margin: 3rem 0 5rem;
 }
