--- a/src/survey/styles/SurveyForm.css
+++ b/src/survey/styles/SurveyForm.css
@@ -5,6 +5,12 @@
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
+.survey_title {
+  display: flex;
+  justify-content: center;
+  padding: 1rem 0 1.5rem;
+}
+
 .survey {
   padding: 1rem;
 }
@@ -13,18 +19,45 @@
   width: 20rem;
   display: flex;
   margin: 30px 0 0;
+  padding: 0 5px;
+  border: 3px solid lavender;
+  border-radius: 6px;
+}
+.text-textarea {
+  width: 20rem;
+  height: auto !important;
+  display: flex;
+  margin: 30px 0 0;
+  padding: 0 5px;
+  resize: none;
+  border: 3px solid lavender;
+  border-radius: 10px;
+}
+
+.text-input:focus,
+.text-textarea:focus {
+  outline: none;
 }
 
 .check-box {
-  border: 1px dotted black;
   padding: 5px;
-  margin: 30px 0 0;
+  margin: 16px 0 0;
 }
+
 .check-options {
   display: flex;
   padding: 5px 5px;
 }
 
+.check-options label {
+  padding-left: 0.3rem;
+}
+
 .survey_button {
   margin: 3rem 0 5rem;
 }
+
+/* .survey-container {
+  width: 50%;
+  height: 50%;
+} */
