--- a/src/index.css
+++ b/src/index.css
@@ -1,51 +1,50 @@
 * {
   box-sizing: border-box;
-  font-family: 'Noto Sans CJK KR';
+  font-family: "Noto Sans CJK KR";
 }
 
 body {
   margin: 0;
-  background: lightgray;
 }
 
 @font-face {
-  font-family: 'Noto Sans CJK KR';
+  font-family: "Noto Sans CJK KR";
   font-style: normal;
   font-weight: 100;
-  src: url("asset/font/NotoSansKR-Light.woff2") format('woff2'),
-  url("asset/font/NotoSansKR-Light.woff") format('woff'),
-  url("asset/font/NotoSansKR-Light.otf") format('truetype')
+  src: url("asset/font/NotoSansKR-Light.woff2") format("woff2"),
+    url("asset/font/NotoSansKR-Light.woff") format("woff"),
+    url("asset/font/NotoSansKR-Light.otf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Noto Sans CJK KR';
+  font-family: "Noto Sans CJK KR";
   font-style: normal;
   font-weight: normal;
-  src: url("asset/font/NotoSansKR-Regular.woff2") format('woff2'),
-  url("asset/font/NotoSansKR-Regular.woff") format('woff'),
-  url("asset/font/NotoSansKR-Regular.otf") format('truetype')
+  src: url("asset/font/NotoSansKR-Regular.woff2") format("woff2"),
+    url("asset/font/NotoSansKR-Regular.woff") format("woff"),
+    url("asset/font/NotoSansKR-Regular.otf") format("truetype");
 }
 
-
 @font-face {
-  font-family: 'Noto Sans CJK KR';
+  font-family: "Noto Sans CJK KR";
   font-style: normal;
   font-weight: 500;
-  src: url("asset/font/NotoSansKR-Medium.woff2") format('woff2'),
-  url("asset/font/NotoSansKR-Medium.woff") format('woff'),
-  url("asset/font/NotoSansKR-Medium.otf") format('truetype')
+  src: url("asset/font/NotoSansKR-Medium.woff2") format("woff2"),
+    url("asset/font/NotoSansKR-Medium.woff") format("woff"),
+    url("asset/font/NotoSansKR-Medium.otf") format("truetype");
 }
 
 @font-face {
-  font-family: 'Noto Sans CJK KR';
+  font-family: "Noto Sans CJK KR";
   font-style: normal;
   font-weight: bold;
-  src: url("asset/font/NotoSansKR-Bold.woff2") format('woff2'),
-  url("asset/font/NotoSansKR-Bold.woff") format('woff'),
-  url("asset/font/NotoSansKR-Bold.otf") format('truetype')
+  src: url("asset/font/NotoSansKR-Bold.woff2") format("woff2"),
+    url("asset/font/NotoSansKR-Bold.woff") format("woff"),
+    url("asset/font/NotoSansKR-Bold.otf") format("truetype");
 }
 
-.slide-in-left-enter { /* side-bar transition */
+.slide-in-left-enter {
+  /* side-bar transition */
   transform: translateX(-100%);
 }
 
