--- a/src/main/styles/Survey.css
+++ b/src/main/styles/Survey.css
@@ -3,7 +3,7 @@ a {
   color: inherit;
 }
 
-.survey-board{
+.survey-board {
   width: 100%;
   margin: 0 auto;
   padding: 80px 100px;
@@ -66,7 +66,7 @@ a {
 }
 
 .table .title {
-  width: 60%
+  width: 60%;
 }
 
 .table .title {
@@ -78,4 +78,4 @@ a {
   font-weight: bolder;
   text-decoration: underline;
   cursor: pointer;
-} 
+}
