--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -1,10 +1,10 @@
 .button {
   font: inherit;
   padding: 0.5rem 1.5rem;
-  border: 2px solid #00A4FA;
+  border: 2px solid #00a4fa;
   border-radius: 5px;
   background: transparent;
-  color: #00A4FA;
+  color: #00a4fa;
   cursor: pointer;
   margin-right: 1rem;
   text-decoration: none;
@@ -18,8 +18,8 @@
 
 .button:hover,
 .button:active {
-  background: #00A4FA;
-  border-color: #00A4FA;
+  background: #00a4fa;
+  border-color: #00a4fa;
   color: white;
 }
 /* #00d354 */
@@ -53,7 +53,7 @@
 .button--danger {
   background: #830000;
   border-color: #830000;
-  color:white;
+  color: white;
 }
 
 .button--danger:hover,
