--- a/src/survey/styles/Register.css
+++ b/src/survey/styles/Register.css
@@ -72,11 +72,11 @@
 }
 
 .survey-form {
-  scrollbar-color: #D4AA70 #e4e4e4;
+  scrollbar-color: #d4aa70 #e4e4e4;
 }
 
 .survey-form::-webkit-scrollbar-thumb {
-  background-image: linear-gradient(180deg, #ff0055 0%, #00A4FA 99%);
+  background-image: linear-gradient(180deg, #ff0055 0%, #00a4fa 99%);
   box-shadow: inset 2px 2px 5px 0 rgba(#fff, 0.5);
   border-radius: 100px;
 }
