--- a/src/shared/components/Navigation/MainNavigation.css
+++ b/src/shared/components/Navigation/MainNavigation.css
@@ -50,7 +50,7 @@
   height: 100%;
 }
 
-@media (min-width: 480px) {
+@media (max-width: 480px) {
   .main-navigation__menu-btn {
     width: 2.5rem;
     height: 1.5rem;
