--- a/src/post/styles/PostItem.css
+++ b/src/post/styles/PostItem.css
@@ -65,3 +65,20 @@
   border: 0;
   padding: 10px;
 }
+
+@media (max-width: 480px) {
+  .post-btn-wrap {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .post-btn-wrap > a,
+  .post-btn-wrap > button {
+    width: 10rem;
+    margin-bottom: 15px;
+  }
+
+  .edit-button {
+    text-align: center;
+  }
+}
