--- a/src/main/styles/Result.css
+++ b/src/main/styles/Result.css
@@ -63,3 +63,33 @@
   width: 250px !important;
   height: 250px !important;
 }
+
+@media (max-width: 480px) {
+  .result {
+    height: auto;
+  }
+
+  .question > ul {
+    padding: 0;
+  }
+
+  .question_title {
+    justify-content: space-between;
+    margin: 0 7% 1rem;
+  }
+
+  .question_title > h3 {
+    width: auto;
+    font-size: 0.8rem;
+  }
+
+  .question_title_sub {
+    font-size: 10px;
+    width: auto;
+    padding: 0;
+  }
+
+  .answer-list {
+    margin: 0 1.5rem 0.5rem;
+  }
+}
