--- a/src/main/styles/Result.css
+++ b/src/main/styles/Result.css
@@ -8,6 +8,10 @@
   margin: 1rem 0.5rem;
 }
 
+.question > ul {
+  padding: 0 2rem 0 1rem;
+}
+
 .question_title {
   display: flex;
   align-items: center;
@@ -66,6 +70,7 @@
 
 @media (max-width: 480px) {
   .result {
+    margin: 0 1rem 0;
     height: auto;
   }
 
