--- a/src/main/styles/Mobile.css
+++ b/src/main/styles/Mobile.css
@@ -1,10 +1,15 @@
-.result-title > h2 {
+.result-title {
+  display: flex;
+  align-items: center;
   margin: 0 2rem;
-  font-size: 1.3em;
 }
 
-.result-title > a {
+.result-title > svg {
   cursor: pointer;
-  margin-right: 0.5rem;
-  font-weight: 900;
+  margin-top: 0.2rem;
+}
+
+.result-title > h2 {
+  margin: 0 0 0 0.3rem;
+  font-size: 1.3em;
 }
