fix style in SurveyResult

--- a/src/main/styles/Result.css
+++ b/src/main/styles/Result.css
@@ -12,13 +12,13 @@
   padding: 0 2rem 0 1rem;
 }
 
-.question_title {
+.question_title_box {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
 }
 
-.question_title > h3 {
+.question_title_box > h3 {
   width: 80%;
 }
 
@@ -78,14 +78,19 @@
     padding: 0;
   }
 
-  .question_title {
+  .question_title_box {
     justify-content: space-between;
     margin: 0 7% 1rem;
   }
 
-  .question_title > h3 {
-    width: auto;
+  .title {
     font-size: 0.8rem;
+    width: auto;
+  }
+
+  .title_main {
+    font-size: 0.8rem;
+    width: 85%;
   }
 
   .question_title_sub {
