--- a/src/post/styles/PostItem.css
+++ b/src/post/styles/PostItem.css
@@ -58,7 +58,7 @@
   white-space: pre-line;
 }
 
-.post-btn-wrap {
+.post-btn-wrapper {
   display: flex;
   justify-content: center;
   margin-top: 30px;
@@ -67,13 +67,13 @@
 }
 
 @media (max-width: 480px) {
-  .post-btn-wrap {
+  .post-btn-wrapper {
     flex-direction: column;
     align-items: center;
   }
 
-  .post-btn-wrap > a,
-  .post-btn-wrap > button {
+  .post-btn-wrapper > a,
+  .post-btn-wrapper > button {
     width: 10rem;
     margin-bottom: 15px;
     text-align: center;
