--- a/src/survey/styles/SurveyForm.css
+++ b/src/survey/styles/SurveyForm.css
@@ -1,11 +1,11 @@
-.survey_card {
+.survey-card {
   width: 25rem;
   margin: 1rem auto;
   background-color: ghostwhite;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 }
 
-.survey_title {
+.survey-title {
   display: flex;
   justify-content: center;
   padding: 1rem 0 1.5rem;
@@ -53,7 +53,7 @@
   padding-left: 0.3rem;
 }
 
-.survey_button {
+.survey-button {
   margin: 3rem 0 5rem;
 }
 
